improved css and fixed a bug on mobile

--- a/main/static/main/css/doctors-desktop.css
+++ b/main/static/main/css/doctors-desktop.css
@@ -15,6 +15,8 @@
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .doctor-box {
