--- a/main/static/main/css/doctors-mobile.css
+++ b/main/static/main/css/doctors-mobile.css
@@ -5,7 +5,7 @@
     }
 
     .doctor-picture-single {
-        width: auto;
+        width: 100%;
         height: auto;
         margin-bottom: 20px;
     }
